@@ -1,17 +1,5 @@
 /*
- * Copyright 2000-2015 JetBrains s.r.o.
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * Copyright 2000-2017 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
  */
 package org.jetbrains.idea.devkit.run;
 
@@ -37,7 +25,7 @@ import java.util.Collection;
 
 public class PluginConfigurationType implements ConfigurationType {
   private final ConfigurationFactory myFactory;
-  private String myVmParameters;
+  private String myVmParameters = "-Xmx512m -Xms256m -XX:MaxPermSize=250m -ea";
 
   public PluginConfigurationType() {
     myFactory = new ConfigurationFactory(this) {
@@ -107,6 +95,7 @@ public class PluginConfigurationType implements ConfigurationType {
     if (myVmParameters == null) {
       String vmOptions;
       try {
+        //noinspection SpellCheckingInspection
         vmOptions = FileUtil.loadFile(new File(PathManager.getBinPath(), "idea.plugins.vmoptions"));
       }
       catch (IOException e) {
